--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="./src/assets/img/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>珠海之心后台管理系统</title>
+        <title>珠海希望之心实验学校后台管理系统</title>
     </head>
     <body>
         <div id="app"></div>
